test/official_tests/operator/add_bool_nil.lox
true + nil; // error: {"line":1,"message":"Operator '+': incompatible types 'boolean' and 'nil'","type":"RuntimeError"}
